fix navbar on homepage on mobile

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,4 +1,6 @@
 #homePage {
+    z-index: -1;
+
     position: absolute;
     top: 10%;
     bottom: 0;
@@ -12,8 +14,6 @@
     -o-background-size: cover;
 
     overflow-x: hidden;
-
-    z-index: 0;
 }
 
 #overlayBG {
